--- a/package.json
+++ b/package.json
@@ -9,18 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.17.0",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
+    "@tiptap/extension-placeholder": "^2.5.5",
+    "@tiptap/pm": "^2.5.5",
+    "@tiptap/react": "^2.5.5",
+    "@tiptap/starter-kit": "^2.5.5",
+    "@uploadthing/react": "^6.7.2",
+    "arctic": "^1.9.2",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucia": "^3.2.0",
+    "lucide-react": "^0.414.0",
+    "next": "14.2.5",
+    "next-themes": "^0.3.0",
+    "prisma": "^5.17.0",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-image-file-resizer": "^0.4.8",
+    "react-intersection-observer": "^9.13.0",
+    "react-linkify-it": "^1.0.8",
+    "stream-chat": "^8.37.0",
+    "stream-chat-react": "^11.23.3",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
