--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
     "react-linkify-it": "^1.0.8",
+    "sonner": "^1.5.0",
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.3",
     "tailwind-merge": "^2.4.0",
